[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
memoize = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
